<resources>
    <string name="app_name">InicioSesion</string>
    <string name="text_view">BIENVENIDO</string>
    <string name="txtmail">Correo Electronico</string>
    <string name="txtcontra">Contraseña</string>
    <string name="btningresar">Ingresar</string>
    <string name="btneliminar">Eliminar</string>
    <string name="btnsalir">Salir</string>


    <string name="txt_codigo">Ingresar Codigo</string>
    <string name="txt_dni">Ingresar DNI</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="BotonRegistrar">Registrar</string>
    <string name="BotonConsultar">Buscar</string>
    <string name="BotonEliminar">Eliminar</string>
    <string name="BotonModificar">Modificar</string>


    <string name="txt_codigochina">Ingresar Codigo</string>
    <string name="txtusu">Codigo Usuario</string>
    <string name="txtdatos">Nombre</string>
    <string name="txtedad">Edad</string>
    <string name="txtpre">Etapa Prenatal</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="modficar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="verificar">Verificar</string>


    <string name="txtconsultar">Ingresar DNI</string>
    <string name="btnconsultar">Consultar</string>
    <string name="btnborrar">Limpiar</string>


</resources>
